run to check metadata

--- a/Gallotia_stehlini_res.html
+++ b/Gallotia_stehlini_res.html
@@ -54,16 +54,16 @@
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
     <TR><TD> 56</TD> <TD>63.59</TD> <TD>0.1355</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1050</TD> <TD>1138</TD> <TD>0.08396</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>4350</TD> <TD>4350</TD> <TD>1.931e-09</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>5.21</TD> <TD>4.746</TD> <TD>0.08903</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>13.5</TD> <TD>10.9</TD> <TD>0.1924</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
-    <TR><TD>14.6</TD> <TD>14.6</TD> <TD>1.474e-08</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD> 17</TD> <TD>17.64</TD> <TD>0.03778</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD>1050</TD> <TD>1138</TD> <TD>0.08421</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>4350</TD> <TD>4351</TD> <TD>0.0001256</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>5.21</TD> <TD>4.746</TD> <TD>0.08902</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>13.5</TD> <TD>10.9</TD> <TD>0.1923</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD>14.6</TD> <TD>14.6</TD> <TD>8.209e-06</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
+    <TR><TD> 17</TD> <TD>17.64</TD> <TD>0.03779</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
     <TR><TD> 22</TD> <TD>17.95</TD> <TD>0.184</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD> 88</TD> <TD>88.1</TD> <TD>0.001149</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet</TD></TR>
-    <TR><TD>94.59</TD> <TD>93.03</TD> <TD>0.01645</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
-    <TR><TD>0.02685</TD> <TD>0.0265</TD> <TD>0.01284</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR><TD> 88</TD> <TD>88.1</TD> <TD>0.001182</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet</TD></TR>
+    <TR><TD>94.59</TD> <TD>93.03</TD> <TD>0.01647</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
+    <TR><TD>0.02685</TD> <TD>0.0265</TD> <TD>0.0129</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
     <TR><TD colspan="2">see figure</TD> <TD>0.09169</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
     <TR><TD colspan="2">see figure</TD> <TD>0.1001</TD> <TD>tLm</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
     <TR class="psd"><TD>0.02</TD> <TD>0.06556</TD> <TD>2.278</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
@@ -72,7 +72,7 @@
     <TR class="psd"><TD> 18</TD> <TD>10.09</TD> <TD>0.4396</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
     <TR class="psd"><TD>0.002</TD> <TD>0.0003825</TD> <TD>0.8088</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
     <TR class="psd"><TD>0.8</TD> <TD>0.7981</TD> <TD>0.002327</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.2981</TD> <TD>0.006245</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD>0.3</TD> <TD>0.2981</TD> <TD>0.006236</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
   </TABLE>
   </div>
 
