--- a/Gallotia_stehlini_res.html
+++ b/Gallotia_stehlini_res.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="par">
-  <h4>COMPLETE = 2.4; MRE =    0.073; SMSE =    0.077 </h4>
+  <h4>COMPLETE = 2.4; MRE =    0.081; SMSE =    0.084 </h4>
   </div>
 
   <p class="clear"></p>
@@ -61,7 +61,8 @@
     <TR><TD>14.6</TD> <TD>14.6</TD> <TD>8.209e-06</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
     <TR><TD> 17</TD> <TD>17.64</TD> <TD>0.03779</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
     <TR><TD> 22</TD> <TD>17.95</TD> <TD>0.184</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD> 88</TD> <TD>88.1</TD> <TD>0.001182</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet</TD></TR>
+    <TR><TD>2.12</TD> <TD>1.715</TD> <TD>0.1909</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD> 88</TD> <TD>88.1</TD> <TD>0.001182</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
     <TR><TD>94.59</TD> <TD>93.03</TD> <TD>0.01647</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
     <TR><TD>0.02685</TD> <TD>0.0265</TD> <TD>0.0129</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
     <TR><TD colspan="2">see figure</TD> <TD>0.09169</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
