--- a/Gallotia_simonyi_res.html
+++ b/Gallotia_simonyi_res.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="par">
-  <h4>COMPLETE = 2.4; MRE =    0.109; SMSE =    0.113 </h4>
+  <h4>COMPLETE = 2.4; MRE =    0.084; SMSE =    0.082 </h4>
   </div>
 
   <p class="clear"></p>
@@ -53,29 +53,29 @@
   <h2>Data & predictions</h2>
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
-    <TR><TD> 56</TD> <TD>61.63</TD> <TD>0.1006</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1050</TD> <TD>1018</TD> <TD>0.03015</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>3990</TD> <TD>4358</TD> <TD>0.09213</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>5.29</TD> <TD>5.254</TD> <TD>0.006793</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>13.1</TD> <TD>12.54</TD> <TD>0.04255</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
-    <TR><TD>13.5</TD> <TD>11.63</TD> <TD>0.1383</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD>16.5</TD> <TD>17.02</TD> <TD>0.03134</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
-    <TR><TD>19.4</TD> <TD>19.7</TD> <TD>0.01542</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD>5.2</TD> <TD>4.194</TD> <TD>0.1934</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
-    <TR><TD>3.95</TD> <TD>2.746</TD> <TD>0.3047</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
-    <TR><TD>89.35</TD> <TD>93.3</TD> <TD>0.04426</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
-    <TR><TD>151</TD> <TD>148.5</TD> <TD>0.01686</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
-    <TR><TD>0.02356</TD> <TD>0.01697</TD> <TD>0.2798</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
-    <TR><TD colspan="2">see figure</TD> <TD>0.146</TD> <TD>LN</TD> <TD colspan="2">length, <font color="blue"><i>vs.</i></font> yearly fecundity</TD>
-    <TR><TD colspan="2">see figure</TD> <TD>0.1891</TD> <TD>tL_j</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
-    <TR><TD colspan="2">see figure</TD> <TD>0.109</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
-    <TR class="psd"><TD>0.02</TD> <TD>0.07284</TD> <TD>2.642</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.7711</TD> <TD>0.03615</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD> 56</TD> <TD>58.1</TD> <TD>0.03757</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
+    <TR><TD>1050</TD> <TD>1011</TD> <TD>0.037</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>3990</TD> <TD>3884</TD> <TD>0.02662</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>5.29</TD> <TD>5.585</TD> <TD>0.05575</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>13.1</TD> <TD>12.41</TD> <TD>0.05237</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD>13.5</TD> <TD>13.35</TD> <TD>0.01132</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
+    <TR><TD>16.5</TD> <TD>17.5</TD> <TD>0.06044</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD>19.4</TD> <TD>19.94</TD> <TD>0.02803</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
+    <TR><TD>5.2</TD> <TD>5.615</TD> <TD>0.07978</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
+    <TR><TD>3.95</TD> <TD>3.262</TD> <TD>0.1742</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD>89.35</TD> <TD>100.3</TD> <TD>0.1226</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
+    <TR><TD>151</TD> <TD>151.5</TD> <TD>0.003323</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
+    <TR><TD>0.02356</TD> <TD>0.01892</TD> <TD>0.1969</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR><TD colspan="2">see figure</TD> <TD>0.1675</TD> <TD>LN</TD> <TD colspan="2">length, <font color="blue"><i>vs.</i></font> yearly fecundity</TD>
+    <TR><TD colspan="2">see figure</TD> <TD>0.1806</TD> <TD>tL_j</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
+    <TR><TD colspan="2">see figure</TD> <TD>0.1103</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
+    <TR class="psd"><TD>0.02</TD> <TD>0.08634</TD> <TD>3.317</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.6618</TD> <TD>0.1727</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
     <TR class="psd"><TD>0.95</TD> <TD>0.95</TD> <TD>  0</TD> <TD>psd.kap_R</TD> <TD>-</TD> <TD>reproduction efficiency</TD></TR>
-    <TR class="psd"><TD> 18</TD> <TD>17.8</TD> <TD>0.01113</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
-    <TR class="psd"><TD>0.002</TD> <TD>0.0003357</TD> <TD>0.8322</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.7863</TD> <TD>0.01711</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.1505</TD> <TD>0.4983</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD> 18</TD> <TD>15.06</TD> <TD>0.1631</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
+    <TR class="psd"><TD>0.002</TD> <TD>0.0005884</TD> <TD>0.7058</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.8006</TD> <TD>0.000787</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
+    <TR class="psd"><TD>0.3</TD> <TD>0.3062</TD> <TD>0.0206</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
   </TABLE>
   </div>
 
@@ -85,27 +85,27 @@
     <TR class="head"><TH>symbol</TH> <TH>units</TH> <TH>value</TH>  <TH>free</TH> <TH>description</TH> </TR>
     <TR><TD>T_ref</TD> <TD>K</TD> <TD>293.1</TD> <TD>0</TD> <TD>Reference temperature</TD></TR>
     <TR><TD>T_A</TD> <TD>K</TD> <TD>8000</TD> <TD>0</TD> <TD>Arrhenius temperature</TD></TR>
-    <TR><TD>z</TD> <TD>-</TD> <TD>4.273</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
+    <TR><TD>z</TD> <TD>-</TD> <TD>4.411</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
     <TR><TD>F_m</TD> <TD>l/d.cm^2</TD> <TD>6.5</TD> <TD>0</TD> <TD>{F_m}, max spec searching rate</TD></TR>
     <TR><TD>kap_X</TD> <TD>-</TD> <TD>0.8</TD> <TD>0</TD> <TD>digestion efficiency of food to reserve</TD></TR>
     <TR><TD>kap_P</TD> <TD>-</TD> <TD>0.1</TD> <TD>0</TD> <TD>faecation efficiency of food to faeces</TD></TR>
-    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.07284</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
-    <TR><TD>kap</TD> <TD>-</TD> <TD>0.7711</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.08634</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
+    <TR><TD>kap</TD> <TD>-</TD> <TD>0.6618</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
     <TR><TD>kap_R</TD> <TD>-</TD> <TD>0.95</TD> <TD>0</TD> <TD>reproduction efficiency</TD></TR>
-    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>17.8</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
+    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>15.06</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
     <TR><TD>p_T</TD> <TD>J/d.cm^2</TD> <TD>  0</TD> <TD>0</TD> <TD>{p_T}, surf-spec somatic maint</TD></TR>
-    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0003357</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7982</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
-    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>5842</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
-    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>1.608e+05</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
-    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>1.003e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
+    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0005884</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7839</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
+    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>1.175e+04</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
+    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>2.141e+05</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
+    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>1.234e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
     <TR><TD>s_G</TD> <TD>-</TD> <TD>0.0001</TD> <TD>0</TD> <TD>Gompertz stress coefficient</TD></TR>
-    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>6.618e+04</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
-    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2511</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
+    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>1.72e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
+    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2521</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
     <TR><TD>f</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for 0-var data</TD></TR>
     <TR><TD>f_LN</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for LN data</TD></TR>
     <TR><TD>f_tL</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for tL data</TD></TR>
-    <TR><TD>z_m</TD> <TD>-</TD> <TD>4.946</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
+    <TR><TD>z_m</TD> <TD>-</TD> <TD>5.028</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
   </TABLE>
   </div>
 
