--- a/Gallotia_galloti_res.html
+++ b/Gallotia_galloti_res.html
@@ -53,26 +53,26 @@
   <h2>Data & predictions</h2>
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
-    <TR><TD> 56</TD> <TD>59.42</TD> <TD>0.06114</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1460</TD> <TD>1390</TD> <TD>0.0481</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>2920</TD> <TD>2920</TD> <TD>5.711e-05</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>4.5</TD> <TD>4.133</TD> <TD>0.0816</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>7.7</TD> <TD>9.311</TD> <TD>0.2093</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD> 56</TD> <TD>59.43</TD> <TD>0.06119</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
+    <TR><TD>1460</TD> <TD>1390</TD> <TD>0.04824</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>2920</TD> <TD>2920</TD> <TD>1.911e-09</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>4.5</TD> <TD>4.133</TD> <TD>0.08164</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>7.7</TD> <TD>9.311</TD> <TD>0.2092</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
     <TR><TD>8.1</TD> <TD>12.23</TD> <TD>0.5096</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD>10.2</TD> <TD>11.12</TD> <TD>0.09053</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
-    <TR><TD>12.2</TD> <TD>12.23</TD> <TD>0.002269</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD>1.16</TD> <TD>1.167</TD> <TD>0.005995</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
-    <TR><TD>20.72</TD> <TD>22.75</TD> <TD>0.09811</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
-    <TR><TD>34.43</TD> <TD>30.67</TD> <TD>0.1093</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet weight of males</TD></TR>
-    <TR><TD>0.008082</TD> <TD>0.008072</TD> <TD>0.001302</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
-    <TR><TD colspan="2">see figure</TD> <TD>0.06948</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
-    <TR class="psd"><TD>0.02</TD> <TD>0.06435</TD> <TD>2.218</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
+    <TR><TD>10.2</TD> <TD>11.12</TD> <TD>0.09045</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD>12.2</TD> <TD>12.23</TD> <TD>0.002261</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
+    <TR><TD>1.16</TD> <TD>1.167</TD> <TD>0.006</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD>20.72</TD> <TD>22.75</TD> <TD>0.09804</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
+    <TR><TD>34.43</TD> <TD>30.67</TD> <TD>0.1092</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet weight of males</TD></TR>
+    <TR><TD>0.008082</TD> <TD>0.008071</TD> <TD>0.001325</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR><TD colspan="2">see figure</TD> <TD>0.0695</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
+    <TR class="psd"><TD>0.02</TD> <TD>0.06435</TD> <TD>2.217</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
     <TR class="psd"><TD>0.8</TD> <TD>0.7419</TD> <TD>0.07263</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
     <TR class="psd"><TD>0.95</TD> <TD>0.95</TD> <TD>  0</TD> <TD>psd.kap_R</TD> <TD>-</TD> <TD>reproduction efficiency</TD></TR>
-    <TR class="psd"><TD> 18</TD> <TD>21.13</TD> <TD>0.1739</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
-    <TR class="psd"><TD>0.002</TD> <TD>0.0008065</TD> <TD>0.5968</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.8005</TD> <TD>0.0005748</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.2992</TD> <TD>0.002503</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD> 18</TD> <TD>21.13</TD> <TD>0.1741</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
+    <TR class="psd"><TD>0.002</TD> <TD>0.0008068</TD> <TD>0.5966</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.8005</TD> <TD>0.000601</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
+    <TR class="psd"><TD>0.3</TD> <TD>0.2993</TD> <TD>0.002255</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
   </TABLE>
   </div>
 
@@ -91,13 +91,13 @@
     <TR><TD>kap_R</TD> <TD>-</TD> <TD>0.95</TD> <TD>0</TD> <TD>reproduction efficiency</TD></TR>
     <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>21.13</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
     <TR><TD>p_T</TD> <TD>J/d.cm^2</TD> <TD>  0</TD> <TD>0</TD> <TD>{p_T}, surf-spec somatic maint</TD></TR>
-    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0008065</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7841</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
+    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0008068</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7840</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
     <TR><TD>E_Hb</TD> <TD>J</TD> <TD>2895</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
-    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>6.56e+04</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
-    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>4.104e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
+    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>6.559e+04</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
+    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>4.105e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
     <TR><TD>s_G</TD> <TD>-</TD> <TD>0.0001</TD> <TD>0</TD> <TD>Gompertz stress coefficient</TD></TR>
-    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>3.161e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
+    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>3.364e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
     <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2416</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
     <TR><TD>f</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for 0-var data</TD></TR>
     <TR><TD>z_m</TD> <TD>-</TD> <TD>2.954</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
